css/style.css
@font-face {
    font-family: Montserrat;
    font-weight: 400;
    src: url("/fonts/Montserrat-Regular.woff2"),
        url("/fonts/Montserrat-Regular.woff");
}

@font-face {
    font-family: Montserrat;
    font-weight: 600;
    src: url("/fonts/Montserrat-SemiBold.woff2"),
        url("/fonts/Montserrat-SemiBold.woff");
}

@font-face {
    font-family: Montserrat;
    font-weight: 700;
    src: url("/fonts/Montserrat-Bold.woff2"),
        url("/fonts/Montserrat-Bold.woff");
}

@font-face {
    font-family: Montserrat;
    font-weight: 800;
    src: url("/fonts/Montserrat-ExtraBold.woff2"),
        url("/fonts/Montserrat-ExtraBold.woff");
}

/* common classes */
* {
    box-sizing: border-box;
}

.gray-text {
    color: #CACACA;
}

*:focus {
    outline: 2px solid #FF9900;
}

*:active {
    outline: 0;
}

ul {
    padding: 0;
}

body {
    background-color: #FFF;
}

.container {
    margin-left: auto;
    margin-right: auto;

    width: 1770px;
}

.section-heading {
    margin: 0;

    color: #333;
    font-family: Montserrat;
    font-size: 48px;
    font-weight: 400;
    line-height: 1;
}

.section-content-font {
    color: #333;
    font-family: Montserrat;
    font-size: 16px;
    font-weight: 400;
    line-height: 32px;
}

.subheading {
    font-family: Montserrat;
    font-size: 24px;
    font-weight: 700;
    line-height: 29px;
    color: #333333;

    margin: 0px 0px 9px 0px;
}

.button {
    display: inline-block;
    background-color: #FF9900;
    color: #FFF;
    padding: 20px 38px;

    font-family: Montserrat;
    font-size: 16px;
    font-weight: 700;
    line-height: 1;

    text-decoration: none;
}

.button:hover,
.button:focus {
    background-color: rgba(255, 153, 00, .7);
    outline: none;
}

.button:active {
    background-color: #E1670E;
}

.button2 {
    padding: 22px 38px;
}

.button2:hover,
.button2:focus {
    background-color: #F7B045;
}

.button2:active {
    background-color: #E1670E;
}

.transparent-button-orange {
    padding: 19px 35px;
    border: 3px solid #FF9900;
    background-color: transparent;
}

.transparent-button-orange:hover,
.transparent-button-orange:focus {
    background-color: #FF9900;
    border-color: #FF9900;
}

.transparent-button-orange:active {
    background-color: #E1670E;
    border-color: #E1670E;
}

.transparent-button-gray {
    padding: 21px 37px;

    font-family: Montserrat;
    font-size: 16px;
    font-weight: 400;
    line-height: 1;

    border: 1px solid #333333;
    background: transparent;
    color: #333333;
}

.transparent-button-gray:focus,
.transparent-button-gray:hover {
    background-color: #666666;
    border-color: #666666;
    color: #FFF;
}

.transparent-button-gray:active {
    background-color: #000;
    border-color: #000;
    color: #FFF;
}

/* header */
.header {
    display: block;
    height: 100px;
    position: relative;

    box-shadow: 0px 4px 3px 0px rgb(0 0 0 / 24%);
}

.header__container {
    padding: 14px 0px 14px 0px;

    display: flex;
    justify-content: space-between;
    align-items: center;
}

.top-nav__list {
    list-style: none;
    align-items: center;
}

.top-nav__item {
    display: inline-block;
}

.top-nav__item:not(:last-child) {
    margin-right: 68px;
}

.top-nav__link {
    padding: 5px;

    user-select: none;
    font-family: Montserrat;
    font-size: 18px;
    font-weight: 600;
    line-height: 1;
    text-decoration: none;
    color: #333333;

    border: 2px solid transparent;
}

.top-nav__link:hover {
    border-bottom: 2px solid #FF9900;
}

.top-nav__link:focus {
    border: 2px solid #FF9900;
    outline: none;
}

.top-nav__link:active {
    color: #E1670E;
    border-top: 2px solid transparent;
    border-left: 2px solid transparent;
    border-right: 2px solid transparent;
    border-bottom: 2px solid #E1670E;
}

.top-nav__search-button {
    padding: 2px;

    transform: translate(3px, -2px);

    cursor: pointer;
    border: 0;
    background-color: transparent;
    text-align: center;
}

.top-nav__search-icon {
    display: inline;
    vertical-align: middle;

    width: 24px;
    height: 24px;
}

.top-nav__search-button:hover path {
    stroke: #FF9900;
}

.top-nav__search-button:hover rect {
    fill: #FF9900;
}

.top-nav__search-button:active {
    outline: 0;
}

.top-nav__search-button:active path {
    stroke: #FF9900;
}

.top-nav__search-button:active rect {
    fill: #FF9900;
}

/* hero */
.hero {
    margin-bottom: 105px;
}

.hero__container {
    padding: 100px 0px 100px 80px;
    min-height: 620px;

    background-image: url("/img/hero/bg1.jpg");
    background-repeat: no-repeat;
    background-size: cover;
}

.hero__heading {
    max-width: 55%;
    margin: 0px 0px 25px 0px;

    color: #FFF;
    font-family: Montserrat;
    font-size: 70px;
    font-weight: 800;
    line-height: 85px;
}

.hero__button {
    padding: 24px 39.5px;

    font-family: Montserrat;
    font-size: 23px;
    font-weight: 700;
    line-height: 28.6px;
}

.hero__content {
    max-width: 50%;
    margin: 0px 0px 90px 0px;

    color: #FFF;
    font-family: Montserrat;
    font-size: 24px;
    font-weight: 700;
    line-height: 29px;
}

/* about */
.about {
    margin-bottom: 106px;
}

.about__heading {
    margin-bottom: 25px;
}

.about__content {
    margin-bottom: 50px;
    width: 69.5%;
}

.about__card-block {
    display: flex;
}

.about__card-block-right {
    flex: 1 1;
}

.about__card-block-left {
    height: 622px;
    width: 868px;
    margin-right: 32px;

    flex: 0 1 868px;
    display: flex;
    flex-direction: row;
    align-items: flex-end;

    background-image: url("/img/about/about__img1.jpg");
    background-repeat: no-repeat;
    background-size: cover;
}

.about__card-block-left-content {
    padding: 50px;
    display: flex;
    align-items: center;
    justify-content: space-between;

    background-color: rgba(0, 0, 0, 0.5);

    color: #FFF;
    font-family: Montserrat;
    font-size: 16px;
    font-weight: 700;
    line-height: 32px;
}
/* ... */

